--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
     name: registrationService
 
   datasource:
-    url: jdbc:mysql://localhost:3306/ipj_pro
+    url: jdbc:mysql://localhost:3306/ipcdb_product
     username: root
