--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8099
+  port: 8084
 
 spring:
   application:
     name: registrationService
 
   datasource:
-    url: jdbc:mysql://localhost:3306/ipj_pro
+    url: jdbc:mysql://localhost:3306/ipcdb_product
     username: root
