--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: registrationService
+    name: userService
 
   datasource:
     url: jdbc:mysql://localhost:3306/ipcdb_product
